css/style.css
html {
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
  font-size: 17px;
}

.content {
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.picture {
  border-radius: 290486px;
  max-height: 20rem;
  max-width: 20rem;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.bio {
  position: relative;
}

.position-text {
  font-size: 1.15rem;
  font-weight: 450;
}

/* Description container */
.description {
  width: 90vw;
  max-width: 25rem;
}

/* Social list container */
.social {
  display: flex;
  margin-top: 1.5rem;
  padding: 0;
}

/* Social list items */
.social li {
  margin-right: 0.5rem;
  margin-bottom: 1rem;
  width: 2rem;
  height: 2rem;
  
  list-style-type: none;
}

/* Social links */
.social a { 
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5rem;
  opacity: 0.5;
  width: 2rem;
  height: 2rem;
  transition-property: opacity, transform;
  will-change: opacity, transform;
  color: black;
  text-decoration: none;
}

.social a:hover {
  opacity: 1;
  transform: scale(1.25);
  color: #0071e3;
}

.social a:active {
  opacity: 1;
  transform: scale(1.1);
  color: #0071e3;
}

.button {
  background-clip: border-box;
  background-color: #0071e3;
  border-radius: 980px;
  padding: 8px 16px;
  font-weight: normal;
  color: rgb(255, 255, 255);
  cursor: pointer;
  text-decoration: none;
}

.button:hover {
  background-color: rgb(0, 119, 237);
  color: rgb(255, 255, 255);
}

/* Response layout - makes a one column-layout when display is less than 50px */
@media (max-width : 50rem) {
  .content {
    flex-direction: column;
  }
  
  .picture {
    margin-top: 1.5rem;
  }

  .bio {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width : 50rem) {
  .picture {
    margin-right: 1.5rem;
  }

  .bio {
    margin-left: 1.5rem;
  }
}

